# Machine_Learning_Models_from_scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt
KNN-classifier/: KNNClassifier_with_iris_dataset.ipynb  knn_classifier.py
REGRESSION/linear-regression/: linear_regression_madewithml.ipynb  multivariate.py  multivariate_test.py
linear-regression/: linear_regression_madewithml.ipynb  univariate.ipynb
logistic-regression/: binary_classifier.py  logistic_regression_from_scratch.ipynb
