[tool.poetry]
name = "ml-from-scratch"
version = "0.1.0"
description = "machine learning models from scratch"
authors = ["shreydan <iamshreydan@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_from_scratch"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
